--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -10,20 +10,15 @@
     <button class="btn btn-sm btn-outline-primary" id="archived">Archived</button>
     <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>
     <hr>
+    <div id="emails-header" style="padding-bottom: 50px;">
 
+    </div >
     <div id="emails-view" style="padding-bottom: 50px;">
     </div>
     <div id="emails-table">
 
     </div>
-    <div id= "emails-view">
-        <div class="container" id="single-email-content">
-
-        </div>
-        <div class="container" id="single-email-back-section">
-
-        </div>
-    </div>
+ 
     <div id="compose-view">
         <h3>New Email</h3>
         <form id="compose-form">
